# skills-manager

./: .cursorrules  .gitignore  OPTIMIZATION.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: skills-manager.mdc
.github/workflows/: ci.yml
config/: eslint.config.js  tsconfig.node.json  vite.config.ts
docs/superpowers/plans/: 2026-03-23-multitool-default-sources.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: explore.rs  lib.rs  main.rs  recommend.rs
src/components/: CollectionNameDialog.tsx  CommandBar.tsx  ConfirmDialog.tsx  CopyConflictDialog.tsx  CopyDialog.tsx  CopySourceDialog.tsx  EmptyState.tsx  ExplorePanel.tsx  ExploreSkillList.tsx  FolderSelect.tsx  InstallDialog.tsx  RecommendPanel.tsx  Select.tsx  SkillEditor.tsx  SkillList.tsx  SkillPreview.tsx  SourceManager.tsx  SyncDialog.tsx  Toast.tsx  TraySkillsPane.tsx
src/hooks/: useExploreCatalog.ts  useModalDialog.ts  useRecommendFlow.ts  useScanAndSources.ts
src/lib/: ai-settings.ts  browse-empty-copy.ts  collections.test.ts  collections.ts  explore.test.ts  explore.ts  recommend.test.ts  recommend.ts  render-markdown.ts  skill-search.test.ts  skill-search.ts  skills.test.ts  skills.ts  sources.export.test.ts  sources.test.ts  sources.ts  tauri-env.ts  ui-state.ts  ui-timing.ts
src/styles/: app.css  tokens.css
