[package]
name = "skills-manager"
version = "0.1.0"
description = "A lightweight desktop skills manager"
authors = ["yeste"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "skills_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
dirs = "6"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
walkdir = "2.5.0"
